#82 [jn] Try allowing PATCH with reflection then with unsafe if throws